fixed iss26, top menu letter spacing

--- a/css/layout_outer.css
+++ b/css/layout_outer.css
@@ -145,6 +145,7 @@ ul.hmenu li a
 	padding: 15px 12px 15px 12px;
 	float: left;
 	width: auto;
+	letter-spacing: 1px;
 }
 /* end of horizontal menu formatting */
 
